--- a/WebApp-Cubits/appsettings.json
+++ b/WebApp-Cubits/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=(localdb)\\mssqllocaldb;Database=Cubits_Bootcamp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
